fix menu on mobile devices;

--- a/_assets/stylesheets/menu.css.scss
+++ b/_assets/stylesheets/menu.css.scss
@@ -12,6 +12,7 @@ ul.nav {
   box-shadow: 0 0 4px rgba(202, 202, 202, 0.6);
   -moz-box-shadow: 0 0 4px rgba(202, 202, 202, 0.6);
   -webkit-box-shadow: 0 0 4px rgba(202, 202, 202, 0.6);
+  background: #fff;
 
   li {
     display: table-cell;
