--- a/_assets/stylesheets/mobile.css.scss
+++ b/_assets/stylesheets/mobile.css.scss
@@ -255,7 +255,7 @@
     -webkit-box-shadow: none;
     li {
       float: left;
-      width: 33.3%;
+      width: 25%;
       margin-top: 3px;
       margin-right: -1px;
       a {
@@ -263,16 +263,8 @@
         @include no_select;
       }
       &:first-child {
-        display: block;
-        float: none;
-        width: 100%;
-        border-radius: 4px;
-        border-left: 1px solid rgba(9, 9, 9, 0.125);
-        border-right: 1px solid rgba(9, 9, 9, 0.125);
-        margin-top: 0;
-        a {
-          border-left: 0;
-        }
+        border-radius: 0;
+        border-left: 0;
       }
       &:last-child {
         border-radius: 0;
